# mouse

./: .gitignore  CMakeLists.txt  Cargo.toml  main.rs  maze  test.sh
.github/workflows/: rust.yml
src/: CMakeLists.txt  lib.rs  main.c  main.rs  map.rs  maze.c  maze.h  maze.rs  parser.c  path.c  path.h  path.rs  pathfinder.rs  vec.rs  vec2.rs  vec2d.c  vec2d.h  vec2i.c  vec2i.h
src/hardware/: motor.c  motor.h  sensor.c  sensor.h
test/: CMakeLists.txt  main.c  parser.c  parser.h  test_grid_find.c  test_grid_init.c
test/resources/: maze
